--- a/.github/workflows/deployment-to-int.yml
+++ b/.github/workflows/deployment-to-int.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           echo ${{ secrets.INT_SFDX_URL}} > ./INT_SFDX_URL.txt
       - name: Authenticate to target Org
-        run: sfdx auth:sfdxurl:store -f ./INT_SFDX_URL.txt -s -a targetOrg
+        run: sf org login sfdx-url -f ./INT_SFDX_URL.txt -s -a targetOrg
       - name: Installing sfdx git delta
         run: |
           echo y | sf plugins install sfdx-git-delta
