--- a/.github/workflows/deployment-to-int.yml
+++ b/.github/workflows/deployment-to-int.yml
@@ -22,7 +22,7 @@ jobs:
           fetch-depth: 0
       - name: Install Salesforce CLI
         run: |
-          npm install sfdx-cli --global
+          npm install -g @salesforce/cli
       - name: Populate auth file with SFDX_URL secret of target org
         run: |
           echo ${{ secrets.INT_SFDX_URL}} > ./INT_SFDX_URL.txt
