--- a/.github/workflows/deployment-to-int.yml
+++ b/.github/workflows/deployment-to-int.yml
@@ -41,10 +41,14 @@ jobs:
         run: sudo apt-get update && sudo apt-get install default-jdk
       - name: Installing SFDX scanner
         run: sfdx plugins:install @salesforce/sfdx-scanner
+      - name: See directory list prior to scan
+        run: ls -R
       - name: Scan code
         run: sfdx scanner:run --format sarif --target 'changed-sources/**/*.cls'
           --category 'Best Practices,Security,Design,Performance,Code Style'
           --outfile 'apexScanResults.sarif'
+      - name: See directory list post scan
+        run: ls -R
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v4
         with:
