added write permission

--- a/.github/workflows/deployment-to-int.yml
+++ b/.github/workflows/deployment-to-int.yml
@@ -8,6 +8,9 @@ on:
       - force-app/**
     branches:
       - main
+permissions:
+  contents: read
+  security-events: write
 jobs:
   deployment-to-int:
     runs-on: ubuntu-latest
