--- a/.github/workflows/deployment-to-int.yml
+++ b/.github/workflows/deployment-to-int.yml
@@ -44,16 +44,12 @@ jobs:
         run: sudo apt-get update && sudo apt-get install default-jdk
       - name: Installing SFDX scanner
         run: sfdx plugins:install @salesforce/sfdx-scanner
-      - name: See directory list prior to scan
-        run: ls -R
       - name: Scan code
         run: sfdx scanner:run --format sarif --target 'changed-sources/**/*.cls'
           --category 'Best Practices,Security,Design,Performance,Code Style'
           --outfile 'changed-sources/apexScanResults.sarif'
-      - name: See directory list post scan
-        run: ls -R
       - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@v4
+        uses: github/codeql-action/upload-sarif@main
         with:
           sarif_file: changed-sources/apexScanResults.sarif
       - name: Read PR Body
