--- a/.github/workflows/deployment-to-int.yml
+++ b/.github/workflows/deployment-to-int.yml
@@ -72,10 +72,10 @@ jobs:
         run: >
           echo ${{env.APEX_TESTS}}
 
-          sfdx force:source:deploy -p "changed-sources/force-app"  --testlevel RunSpecifiedTests --runtests ${{env.APEX_TESTS}} --json
+          sf project deploy start --source-dir "changed-sources/force-app" --testlevel RunSpecifiedTests --tests ${{env.APEX_TESTS}} --json
       - name: Deployment - run all tests
         if: ${{ env.APEX_TESTS == 'all' }}
         run: >
           echo ${{env.APEX_TESTS}}
 
-          sfdx force:source:deploy -p "changed-sources/force-app"  --testlevel RunLocalTests --json
+          sf project deploy start --source-dir "changed-sources/force-app" --testlevel RunLocalTests --json
