--- a/.github/workflows/deployment-to-int.yml
+++ b/.github/workflows/deployment-to-int.yml
@@ -45,12 +45,7 @@ jobs:
       - name: Installing SFDX scanner
         run: sf plugins install code-analyzer
       - name: Analize code
-        run: 
-          # sfdx scanner:run --format sarif 
-          # --category 'Best Practices,Security,Design,Performance,Code Style'
-          # --outfile 'changed-sources/apexScanResults.sarif'
-
-          sf code-analyzer run --rule-selector Recommended --workspace ./changed-sources --target ./changed-sources/**/*.cls --severity-threshold 2 --output-file ./changed-sources/apexScanResults.sarif --view detail
+        run: sf code-analyzer run --rule-selector Recommended --workspace ./changed-sources --target ./changed-sources/**/*.cls --severity-threshold 2 --output-file ./changed-sources/apexScanResults.sarif --view detail
       # - name: Upload SARIF file
       #   uses: github/codeql-action/upload-sarif@v4
       #   with:
