--- a/.github/workflows/deployment-to-int.yml
+++ b/.github/workflows/deployment-to-int.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v4
         with:
-          sarif_file: changed-sources/apexScanResults.sarif
+          sarif_file: ./changed-sources/apexScanResults.sarif
       - name: Read PR Body
         env:
           PR_BODY: ${{github.event.pull_request.body}}
