--- a/.github/workflows/deployment-to-int.yml
+++ b/.github/workflows/deployment-to-int.yml
@@ -11,6 +11,8 @@ on:
 permissions:
   contents: read
   security-events: write
+  # only required for workflows in private repositories
+  actions: read
 jobs:
   deployment-to-int:
     runs-on: ubuntu-latest
