--- a/.github/workflows/deployment-to-int.yml
+++ b/.github/workflows/deployment-to-int.yml
@@ -57,10 +57,10 @@ jobs:
           PR_BODY: ${{github.event.pull_request.body}}
         run: |
           
-          FILE=./parsePR.js 
+          FILE=./parseBody.js 
           if test -f "$FILE"; then
               echo $PR_BODY > ./pr_body.txt
-              node ./parsePR.js              
+              node ./parseBody.js              
               TESTS=$(cat testsToRun.txt)
               echo "APEX_TESTS=$TESTS" >> $GITHUB_ENV     
           else
