--- a/.github/workflows/deployment-to-prod.yml
+++ b/.github/workflows/deployment-to-prod.yml
@@ -26,4 +26,11 @@ jobs:
               TESTS=all
               echo "APEX_TESTS=$TESTS" >> $GITHUB_ENV 
           fi
-          echo "Extracted APEX_TESTS: ${{ env.APEX_TESTS }}"
+      - name: Deployment - run specified tests
+        if: ${{ env.APEX_TESTS != 'all' }}
+        run: >
+          echo ${{env.APEX_TESTS}}
+      - name: Deployment - run all tests
+        if: ${{ env.APEX_TESTS == 'all' }}
+        run: >
+          echo ${{env.APEX_TESTS}}
