hotfix branch action

--- a/.github/workflows/deployment-of-hotfix.yml
+++ b/.github/workflows/deployment-of-hotfix.yml
@@ -1,4 +1,4 @@
-name: Deployment to INT
+name: Deployment of Hotfix
 on:
   pull_request:
     types:
@@ -14,8 +14,8 @@ permissions:
   # only required for workflows in private repositories
   actions: read
 jobs:
-  deployment-to-int:
-    if: startsWith(github.head_ref, 'feature/')
+  deployment-of-hotfix-to-int:
+    if: startsWith(github.head_ref, 'hotfix/')
     runs-on: ubuntu-latest
     steps:
       - name: Install NodeJS
@@ -79,4 +79,62 @@ jobs:
         run: >
           echo ${{env.APEX_TESTS}}
 
-          sf project deploy start --ignore-conflicts --source-dir ./changed-sources/force-app --test-level RunLocalTests --json
+          sf project deploy start --ignore-conflicts --source-dir ./changed-sources/force-app --test-level RunLocalTests --json		
+  
+  deployment-of-hotfix-to-prod:
+    if: startsWith(github.head_ref, 'hotfix/')
+    runs-on: ubuntu-latest
+    steps:
+    - name: Install NodeJS
+      uses: actions/setup-node@v4
+      with:
+        node-version: "20"
+    - name: Checkout source code
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - name: Install Salesforce CLI
+      run: |
+        npm install -g @salesforce/cli
+    - name: Populate auth file with SFDX_URL secret of target org
+      run: |
+        echo ${{ secrets.PROD_SFDX_URL}} > ./PROD_SFDX_URL.txt
+    - name: Authenticate to target Org
+      run: sf org login sfdx-url -f ./PROD_SFDX_URL.txt -s -a targetOrg
+    - name: Installing java
+      run: sudo apt-get update && sudo apt-get install default-jdk
+    - name: Installing SFDX analyzer
+      run: sf plugins install code-analyzer
+    - name: Analize code
+      run: sf code-analyzer run --rule-selector Recommended --target ./**/*.cls --severity-threshold 2 --output-file ./apexScanResults.sarif
+    - name: Upload SARIF file
+      uses: github/codeql-action/upload-sarif@v4
+      with:
+        sarif_file: ./apexScanResults.sarif
+    - name: Read PR Body
+      env:
+        PR_BODY: ${{github.event.pull_request.body}}
+      run: |
+        
+        FILE=./parseBody.js
+        if test -f "$FILE"; then
+          echo $PR_BODY > ./body.txt
+          node ./parseBody.js
+          TESTS=$(cat testsToRun.txt)
+          echo "APEX_TESTS=$TESTS" >> $GITHUB_ENV
+        else
+          TESTS=all
+          echo "APEX_TESTS=$TESTS" >> $GITHUB_ENV
+        fi
+    - name: Deployment - run specified tests
+      if: ${{ env.APEX_TESTS != 'all' }}
+      run: >
+        echo ${{env.APEX_TESTS}}
+
+        sf project deploy start --ignore-conflicts --source-dir ./changed-sources/force-app --test-level RunSpecifiedTests --tests ${{env.APEX_TESTS}} --json
+    - name: Deployment - run all tests
+      if: ${{ env.APEX_TESTS == 'all' }}
+      run: >
+        echo ${{env.APEX_TESTS}}
+
+        sf project deploy start --ignore-conflicts --source-dir ./changed-sources/force-app --test-level RunLocalTests --json
